kubernetes/yml/springbootmicroservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springbootmicroservice-v1
  labels:
    app: springbootmicroservice  
spec:
#  serviceName: "springbootmicroservice-hs"
  replicas: 1
#  updateStrategy:
#    type: RollingUpdate
#  podManagementPolicy: Parallel  
  selector:
    matchLabels:
      app: springbootmicroservice    
  template:
    metadata:
      labels:
        app: springbootmicroservice
        version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/scheme: "http"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "9191"        
    spec:
      containers:
      - name: springbootmicroservice
        image: marcinkasinski/springbootmicroservice
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /actuator/prometheus
            port: 9191
            httpHeaders:
            - name: X-Custom-Header
              value: Awesome
          initialDelaySeconds: 300
          periodSeconds: 10
        ports:
        - name: http
          containerPort: 9191
        volumeMounts:
        - name: config-springbootmicroservice-bootstrap-yml-cm
          mountPath: /usr/src/myapp/config/bootstrap.yml
          subPath: bootstrap.yml
      volumes:
        - name: config-springbootmicroservice-bootstrap-yml-cm
          configMap:
            name: springbootmicroservice-bootstrap-yml-cm
---
apiVersion: v1
kind: Service
metadata:
  name: springbootmicroservice
  labels:
    app: springbootmicroservice
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v0
      kind: Mapping
      name: springbootmicroservice_mapping
      prefix: /
      timeout_ms: 10000
      service: springbootmicroservice.apps:9191
      #only works via istio ingress gateway
      host: springbootmicroservice1.apps.svc.cluster.local:30999
    
spec:
  type: NodePort
  ports:
  - port: 9191
    targetPort: 9191
    name: http
  selector:
    app: springbootmicroservice
---
apiVersion: v1
kind: Service
metadata:
  name: am-springbootmicroservice
  labels:
    app: springbootmicroservice
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v0
      kind: Mapping
      name: am-springbootmicroservice_mapping
      prefix: /
      timeout_ms: 10000
      service: am-springbootmicroservice.apps:9191
      #only works via istio ingress gateway
      host: springbootmicroservice.apps.svc.cluster.local:30999
spec:
  type: NodePort
  ports:
  - port: 9191
    targetPort: 9191
    name: http
  selector:
    app: springbootmicroservice
---
# An Ingress with 2 hosts and 3 endpoints
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: springbootmicroservice-ingress
  annotations:
    ingress.kubernetes.io/enable-cors: "true"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: springbootmicroservice
    http:
      paths:
      - path: /
        backend:
          serviceName: springbootmicroservice
          servicePort: 9191
---
#curl -H "Host: springbootmicroservice.itzone.pl:30999" localhost:30999/api/get-by-email?email=ajax@ajax.com
#curl -H "Host: springbootmicroservice.apps.svc.cluster.local:30999" localhost:30999/api/get-by-email?email=ajax@ajax.com
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springbootmicroservice
spec:
# aby port przyjął w hostach trzeba usunąć galley deployment
  hosts:
  - "springbootmicroservice.itzone.pl:30999"
  - "springbootmicroservice.apps.svc.cluster.local:30999"
  - "springbootmicroservice" # from webapplication
  gateways:
  - itzone-gateway  
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: springbootmicroservice
        subset: v1
        port:
          number: 9191
      weight: 1
    - destination:
        host: springbootmicroservice
        subset: v2
        port:
          number: 9191
      weight: 99          
    corsPolicy:
      allowOrigin:
      - "*"
      allowMethods:
      - POST
      - GET
      - OPTIONS
      maxAge: "1s"
    appendHeaders:
      key1: "aaax-request-start1"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: springbootmicroservice
spec:
  host: springbootmicroservice
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
#curl -H "Host: springbootmicroservice2.itzone.pl:30999" localhost:30999/api/get-by-email?email=ajax@ajax.com
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springbootmicroservice2.itzone.pl
spec:
  hosts:
  - "springbootmicroservice2.itzone.pl:30999"
  gateways:
  - itzone-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: springbootmicroservice
        #host: ambassador.default.svc.cluster.local # interpreted as springbootweb.apps.svc.cluster.local
        port:
          number: 9191
          #number: 80
---
